@@ -2,6 +2,7 @@ package spss.project.backend.configuration.system;
 
 import java.security.InvalidParameterException;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 
@@ -141,7 +142,7 @@ public class SystemConfig {
      * @return the list of allowed file types
      */
     public List<String> getFileTypes() {
-        return List.copyOf(this.fileTypes);
+        return Collections.unmodifiableList(this.fileTypes);
     }
 
     /**
